Solved two issues. The first one regarded the nav scss where I changed the position from fixed to absolute on the nav__menu so that it doesnt stick on the page when scrolling down. The second one regarded the nav javascript. Now if you click the hamburger menu and you resize the window wo desktop size, the menu dissappears but when you resize back the menu is still visible. Before it would disappear so I fixed that

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -108,7 +108,7 @@
   &__menu {
     font-size: $font-med;
     font-weight: $fw-secondary;
-    position: fixed;
+    position: absolute;
     left: -100%;
     top: 70px;
     gap: 0;
